// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContactPage renders correctly 1`] = `
<DocumentFragment>
  <main>
    <header />
    <section
      class="section"
    >
      <div
        class="container"
      >
        <div
          class="justify-content-md-center row"
        >
          <div
            class="col-md-8 col-12"
          >
            <form />
          </div>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`ContactPageTemplate renders with content 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="justify-content-md-center row"
      >
        <div
          class="col-md-8 col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
      </div>
      <div
        class="justify-content-md-center row"
      >
        <div
          class="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ContactPageTemplate renders with html content 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="justify-content-md-center row"
      >
        <div
          class="col-md-8 col-12"
        >
          <div>
            [object Object]
          </div>
          <hr />
        </div>
      </div>
      <div
        class="justify-content-md-center row"
      >
        <div
          class="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ContactPageTemplate renders without content 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="justify-content-md-center row"
      >
        <div
          class="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
